fix dark mode

--- a/text-effects/style.scss
+++ b/text-effects/style.scss
@@ -31,15 +31,6 @@ body {
 
 .controls {
   grid-area: controls;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  padding: 1em;
-  background: hsl(0, 0%, 95%);
-  border-right: 1px solid hsl(0, 0%, 50%);
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .stage {
