--- a/text-effects/styles/controls.scss
+++ b/text-effects/styles/controls.scss
@@ -7,7 +7,8 @@
   flex-direction: column;
   gap: 1em;
   padding: 1em;
-  background: hsl(0deg, 0%, 95%);
+  color: var(--base-text-color);
+  background: var(--base-color);
   border-right: 1px solid hsl(0deg, 0%, 50%);
   overflow-y: scroll;
   overflow-x: hidden;
