--- a/text-effects/styles/theme.scss
+++ b/text-effects/styles/theme.scss
@@ -15,9 +15,9 @@
     body:not(.light) {
       color-scheme: dark;
       --base-color: hsl(0 0% 20%);
-      --base-text-color: hsl(0 0% 90%);
+      --base-text-color: hsl(0 0% 80%);
       --checked-color: hsl(219, 100%, 30%);
-      --hover-color: hsl(219, 100%, 40%);
+      --hover-color: rgb(0, 71, 204);
       --focus-color: hsl(219, 100%, 50%);
       --base-color-border: hsl(0 0% 30%);
       --checked-color-border: hsl(219, 100%, 40%);
